save user id onesignal when register
